refactor(updater)!: replace `UpdateSpecification` with `UpdateSource` and `UpdateConfiguration`